--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet"> 
-    <title>Umiirosoft Teal</title>
+    <title>Umiirosoft Teal 工事現場 🚧</title>
 </head>
 
 <body>
