--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet"> 
-    <title>Umiirosoft Teal 工事現場 🚧</title>
+    <meta http-equiv="refresh" content="3;url=https://teal.gamma410.win/">
+    <title>Umiirosoft Teal へリダイレクトします✨</title>
 </head>
 
 <body>
@@ -17,7 +18,7 @@
         <h1 class="Umiirosoft">Umiirosoft Teal</h1>
         <div class="detail">
             <p><span>Umiirosoft が</span><span>開発・提供する、</span><span>全く新しい体験を。</span></p>
-            <p><span>公開まで</span><span>もうしばらく</span><span>お待ちください... 🤲</span></p>
+            <p><span>3秒後にリダイレクト</span></p>
         </div>
     </div>
 </body>
