--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet"> 
-    <meta http-equiv="refresh" content="3;url=https://teal.gamma410.win/">
+    <meta http-equiv="refresh" content="1;url=https://teal.gamma410.win/">
     <title>Umiirosoft Teal へリダイレクトします✨</title>
 </head>
 
 <body>
     <div class="item">
-        <h1 class="Umiirosoft">Umiirosoft Teal</h1>
+        <h1 class="Umiirosoft">さあ、行こう！</h1>
         <div class="detail">
             <p><span>Umiirosoft が</span><span>開発・提供する、</span><span>全く新しい体験を。</span></p>
             <p><span>3秒後にリダイレクト</span></p>
