--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1 class="Umiirosoft">さあ、行こう！</h1>
         <div class="detail">
             <p><span>Umiirosoft が</span><span>開発・提供する、</span><span>全く新しい体験を。</span></p>
-            <p><span>3秒後にリダイレクト</span></p>
+            <p><span>リダイレクト</span></p>
         </div>
     </div>
 </body>
