リダイレクト先を変更。

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet"> 
-    <meta http-equiv="refresh" content="1;url=https://teal.gamma410.win/">
+    <meta http-equiv="refresh" content="1;url=https://teal-jp.com/">
     <title>Umiirosoft Teal へリダイレクトします✨</title>
 </head>
 
