add & remove file

--- a/index.html
+++ b/index.html
@@ -5,22 +5,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://gamma-410.github.io/G-CORE/v3.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet"> 
-    <meta http-equiv="refresh" content="1;url=https://teal-jp.com/">
-    <title>Umiirosoft Teal へリダイレクトします✨</title>
+    <title>Teal</title>
 </head>
 
 <body>
-    <div class="item">
-        <h1 class="Umiirosoft">さあ、行こう！</h1>
-        <div class="detail">
-            <p><span>Umiirosoft が</span><span>開発・提供する、</span><span>全く新しい体験を。</span></p>
-            <p><span>リダイレクト</span></p>
-        </div>
-    </div>
+	<header>
+		<h1>Teal API</h1>
+		<p>Prott Ver</p>
+	</header>
+
+	<main>
+		<div>
+			<h1>Teal API</h1>
+			<p>APIでエレガントなSNS体験を。</p>
+		</div>
+		
+		<div>
+			<h4>How To Use</h4>
+			<p>Teal API をつかってみよう。</p>
+		</div>
+	</main>
 </body>
 
 </html>
