--- a/index.html
+++ b/index.html
@@ -19,14 +19,10 @@
 	</header>
 
 	<main>
+		<h3>COMING SOON</h3>
 		<div>
 			<h1>Teal API</h1>
 			<p>APIでエレガントなSNS体験を。</p>
-		</div>
-		
-		<div>
-			<h4>How To Use</h4>
-			<p>Teal API をつかってみよう。</p>
 		</div>
 	</main>
 </body>
