--- a/index.html
+++ b/index.html
@@ -1,30 +1,45 @@
 <!DOCTYPE html>
 <html lang="ja">
-
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://gamma-410.github.io/G-CORE/v3.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Noto+Sans+JP:wght@500&display=swap" rel="stylesheet"> 
-    <title>Teal</title>
+    <title>Teal API</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-	<header>
-		<h1>Teal API</h1>
-		<p>Prott Ver</p>
-	</header>
-
-	<main>
-		<h3>COMING SOON</h3>
-		<div>
-			<h1>Teal API</h1>
-			<p>APIでエレガントなSNS体験を。</p>
-		</div>
-	</main>
+    <header>
+        <img class="logo" src="img/logotype.svg">
+        <p>Prott ver</p>
+    </header>
+    <div class="icon">
+        <img class="iconLogo" src="img/assets_img1.svg">
+    </div>
+    <hr>
+    <div class="main">
+        <h1>About Teal API</h1>
+    </div>
+    <div class="hello">
+        <div class="item">
+            <img src="img/APIのみ.svg">
+        </div>
+        <div class="item">
+            <img src="img/安全.svg">
+        </div>
+        <div class="item">
+            <img src="img/どんな場所でも.svg">
+        </div>
+    </div>
+    <br>
+    <div class="main">
+        <h2>さあ、はじめよう。</h2>
+        <br>
+        <input type="text" class="url" value="https://teal-api.onrender.com/docs" disabled>
+    </div>
+    <br>
+    <hr>
+    <br>
+    <div class="main">
+        <p>Copyright (c) 2023 Umiirosoft.</p>
+    </div>
 </body>
-
 </html>
