--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="main">
         <h2>さあ、はじめよう。</h2>
         <br>
-        <input type="text" class="url" value="https://teal-api.onrender.com/docs" disabled>
+        <input type="text" class="url" value="https://teal-api.glitch.me/docs" disabled>
     </div>
     <br>
     <hr>
